# selenium-practice-scraping

./: README.md  lambda_function.py  pyproject.toml  scraper.py  scratch.py  trending.html
